Coverity analysis defect 156292: Data race condition

XMLWordPrintableJSON

    • Query Optimization
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/mci/3b34054db808e84e865ea3adc167bb30/bazel_cache/8efb34a963653a257fe76e59a8ff65e9/execroot/_main/src/mongo/db/traffic_recorder.cpp:406: MISSING_LOCK 156292 Accessing "this->_recording" without holding lock "mongo::TrafficRecorder._mutex". Elsewhere, "mongo::TrafficRecorder._recording" is written to with "TrafficRecorder._mutex" held 2 out of 2 times.

            Assignee:
            James Harrison
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: