SERVER-108629: Avoid reading _recording without corresponding mutex (#40296)

GitOrigin-RevId: bb93fc731f9d70400473cd481854681f98bbeff4